fix: GitHub Actions log-level パラメータを修正 (info → verbose)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
           **/.env*
           
         # デバッグモード（最初のテスト時のみtrue）
-        log-level: info
+        log-level: verbose
         
         # タイムアウト設定（秒）
         timeout: 600000
